# ToDoApp

./: .gitignore  README.md  pyproject.toml
tests/: test_model.py  test_model_unittest.py
todo/: app.py
todo/model/: todo.py
todo/view/: ui_console.py
