[tool.poetry]
name = "todo"
version = "0.1.0"
description = "A simple ToDo app"
authors = ["Jesus Andres Hincapie <jahlon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rs"

[tool.poetry.scripts]
todo = "todo.app:main"